<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="StringEscaping">CBS</string>

    <string name="seach_text">Buscar...</string>
    <string name="uno">TODOS LOS LIBROS DISPONIBLES</string>
    <string name="descripcion_libros">Disponibles en diversas categorías</string>
    <string name="masVistos">Libros más vistos</string>
    <string name="view_all">Ver todos</string>
    <string name="categorias">Categorías</string>

    <!-- GÉNEROS -->

    <string name="Accion">Acción</string>
    <string name="Fantasía">Fantasía</string>
    <string name="Horror">Horror</string>
    <string name="Romance">Romance</string>

    <!-- MENU -->

    <string name="titulo_categorias"><font color='white'>Categorías</font></string>

</resources>
