<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_background"
    android:orientation="vertical"
    tools:context=".PaginaPrincipal_Activity"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <!-- Menu de navegación -->
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navegation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/menu_background"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <!-- ***************************************************** -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/menu_icono"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/iconomenu" />

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="58dp"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableTop="@drawable/usuario"
                android:fontFamily="@font/josefin_sans_bold"
                android:padding="5dp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/josefin_sans_bold"
                        android:text="CBS"
                        android:textColor="@color/black"
                        android:textSize="30sp" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/oswald_normal"
                            android:layout_marginTop="8dp"
                            android:text="@string/categorias"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_IrCategorias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="217dp"
                            android:backgroundTint="@color/home_background"
                            android:drawableBottom="@color/home_background"
                            android:fontFamily="@font/andika"
                            android:stateListAnimator="@null"
                            android:text="@string/view_all"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:icon="@color/banner_background_light"
                            app:iconTint="@color/banner_background_light"
                            app:rippleColor="@color/banner_background_light" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="135dp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/banner_background_light">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="155dp"
                        android:layout_height="300dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/banner_background"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginBottom="10dp"
                            android:text="Variedad "
                            android:fontFamily="@font/acme"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="de titulos"
                            android:fontFamily="@font/acme"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="40dp"
                            android:text="y géneros"
                            android:fontFamily="@font/acme"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/btnVerTodos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Ver todos"
                            android:textColor="@color/black"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycle"
                        android:layout_width="212dp"
                        android:layout_height="330dp"
                        android:layout_marginLeft="13dp"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/home_background" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/most_viewed_recycler_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/oswald_normal"
                            android:text="@string/masVistos"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="217dp"
                            android:backgroundTint="@color/home_background"
                            android:drawableBottom="@color/home_background"
                            android:stateListAnimator="@null"
                            android:text="@string/view_all"
                            android:textColor="@color/black"
                            app:icon="@color/banner_background_light"
                            app:iconTint="@color/banner_background_light"
                            app:rippleColor="@color/banner_background_light" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:layout_toRightOf="@id/most_viewed_recycler_background" />

                </LinearLayout>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    
</androidx.drawerlayout.widget.DrawerLayout>
